guestbook-php/redis-slave-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: redis
    role: slave
    tier: backend
spec:
  selector:
    app: redis
    role: slave
    tier: backend
  ports:
  - port: 6379
